--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Mochamad Idris (G.111.21.1989)</string>
+    <string name="app_name">Risaldi Firman (G.131.22.0016)</string>
 </resources>
